--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="Quien_somos">
             <h1>Quienes somos?</h1>
             <p> somos una iglesia que busca llevar el evangelio de nuestro señor a muchas mas personas</p>
-
+            <P> Estamos ubicados en via Sain bon 58 TO</P>
         </div>
     </main>
     <footer>
