Mas limpieza y conclucion del menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <nav>
 
             <div>
-                <img src="imagenes/logo.svg" alt="" class="logo">    
+
+             <img src="imagenes/logo-elim-blanco.png" alt="logo elim" class="logo-elim">
+
             </div>
             <input type="checkbox" id="check">
             <label for="check" class="bar-btn" >
@@ -21,7 +23,7 @@
             </label>
             <ul class="nav-menu">
                 <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">Quines somos?</a></li>
+                <li><a href="#">¿Quienes somos?</a></li>
                 <li><a href="#">Ministerios</a></li>
                 <li><a href="#">Predicaciones</a></li>
                 <li><a href="#">Celulas</a></li>
@@ -29,9 +31,13 @@
                 <li><a href="#">Donaciones</a></li>
             </ul>
 
-        </nav>
+        </nav> 
 
-        <div class="">
+        <div class="banner-text container">
+
+            <h1> Mision Cristiana Elim Torino </h1>
+
+            <p> Nuestro deseo es impartir el evangelio a las almas necesitadas </p>
 
         </div>
         
@@ -40,11 +46,13 @@
     <main>
 
     </main>
+
     <footer>
-        <h4>Copyright-ElimTorino</h4>
+
     </footer>
 
     
 <script src="https://kit.fontawesome.com/2cb25f2c39.js"></script>
+
 </body>
 </html>
