slider casi buenos

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
     </header>
     
     <main>
+        <h2>Novedades!!!!!!!!!</h2>
+        <div class="sliders">
+            <ul>
+                <li><img src="imagenes/sliders_imagenes/slider_1.jpg" alt=""></li>
+                <li><img src="imagenes/sliders_imagenes/slider_2.jpg" alt=""></li>
+                <li><img src="imagenes/sliders_imagenes/slider_3.jpg" alt=""></li>
+                <li><img src="imagenes/sliders_imagenes/slider_4.jpg" alt=""></li>
+            </ul>
+        </div>
+
 
     </main>
 
