--- a/Quienes somos.html
+++ b/Quienes somos.html
@@ -22,13 +22,13 @@
                 <i class=" fas fa-bars" ></i>
             </label>
             <ul class="nav-menu">
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">¿Quienes somos?</a></li>
-                <li><a href="#">Ministerios</a></li>
-                <li><a href="#">Predicaciones</a></li>
-                <li><a href="#">Celulas</a></li>
-                <li><a href="#">Biblioteca</a></li>
-                <li><a href="#">Donaciones</a></li>
+                <li><a class="active" href="home.html">Home</a></li>
+                <li><a href="Quienes somos.html">¿Quienes somos?</a></li>
+                <li><a href="ministerios.html">Ministerios</a></li>
+                <li><a href="predicaciones.html">Predicaciones</a></li>
+                <li><a href="celulas.html">Celulas</a></li>
+                <li><a href="biblioteca.html">Biblioteca</a></li>
+                <li><a href="donaciones.html">Donaciones</a></li>
             </ul>
 
         </nav> 
